# metal_triangle

./: .gitignore  AAPLShaderTypes.h  AAPLShaders.metal  CMakeLists.txt  main.m  shaders.metal
resources/: app.plist.in
src/: AAPLShaderTypes.h  main.m  shaders.h  shaders.metal  stb_image.c  stb_image.h
